--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,9 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+.three-line-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-height: 3rem;
+}
