--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,6 @@
   font-style: normal;
 }
 
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -32,7 +31,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Urbanist", Helvetica, sans-serif;
+  font-family: 'Urbanist', Helvetica, sans-serif;
 }
 
 html {
